--- a/front_end/src/components/navbar/navbar.css
+++ b/front_end/src/components/navbar/navbar.css
@@ -1,6 +1,46 @@
-.navbar {
-    background-color: #2874f0;
+.main-navbar {
+  background-color: #2874f0;
+  display: flex;
+  height: 100px;
+  justify-content: space-around;
 }
-.navbar:hover{
-    color: aliceblue;
+
+.navbar-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.navbar-menu ul {
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 15px;
+  width: 100%;
+}
+
+.navbar-menu ul li {
+  list-style-type: none;
+}
+
+.navbar-icon {
+  background-image: url("../../logo.svg");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 10%;
+}
+
+.navbar-search {
+  width: 40%;
+  display: flex;
+  align-items: center;
+}
+
+.navbar-search input {
+  width: 100%;
+  border-radius: 50px;
+  padding: 8px 10px;
+  border: none;
 }
