--- a/front_end/src/components/footer.css
+++ b/front_end/src/components/footer.css
@@ -28,7 +28,7 @@
     /* padding: auto; */
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 450px) {
     .footer-container{
       /* background-color: lightblue; */
       display:block;
@@ -40,6 +40,9 @@
     .footer-1{
         text-align: center;
         margin: auto;
+        height: auto;
+        display: block;
+        padding: auto;
 
     }
     .footer-2{
@@ -47,9 +50,6 @@
         height: auto;
         text-align: center;
         margin: auto;
-
-
-
-        
-    }
+        padding: auto;
+   }
   }
