--- a/front_end/src/components/footer/footer.css
+++ b/front_end/src/components/footer/footer.css
@@ -1,55 +1,54 @@
-.footer-container{
-    background-color:#172337;;
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-    width: 100%;
-    height: 200px;
-    color: white;
-    /* background-color: aqua; */
-    position: absolute;
-    bottom:0px;
-       
+.footer-container {
+  background-color: #172337;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  color: white;
+  position: absolute;
+  bottom: 0px;
 }
-.footer-1{
-    display: flex;
-    justify-content:space-around;
-
-    /* border:1px solid black; */
-    width: 50%;
-    height: 100px;
+.footer-text-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: auto;
+  width: 100%;
 }
-.footer-2{
-    border-left-style: solid;
-    width: 50%;
-    height: 100px;
-    /* display: flex; */
-    /* justify-content: start; */
-    /* padding: auto; */
+.footer-1 {
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+  height: auto;
 }
-
+.footer-2 {
+  border-left-style: solid;
+  width: 50%;
+  height: auto;
+  margin: auto;
+  padding: auto;
+}
 @media only screen and (max-width: 450px) {
-    .footer-container{
-      /* background-color: lightblue; */
-      display:block;
-      text-align: center;
-      height: auto;
-      margin: auto;
-      padding: auto;
-    }
-    .footer-1{
-        text-align: center;
-        margin: auto;
-        height: auto;
-        display: block;
-        padding: auto;
-
-    }
-    .footer-2{
-        border: none;
-        height: auto;
-        text-align: center;
-        margin: auto;
-        padding: auto;
-   }
+  .footer-container {
+    text-align: center;
+    height: auto;
+    margin: auto;
+    padding: auto;
   }
+  .footer-text-container {
+    display: block;
+  }
+  .footer-1 {
+    text-align: center;
+    margin: auto;
+    height: auto;
+    display: block;
+    padding: auto;
+  }
+  .footer-2 {
+    border: none;
+    height: auto;
+    text-align: center;
+    margin: auto;
+    padding: auto;
+  }
+}
