--- a/front_end/src/components/footer/footer.css
+++ b/front_end/src/components/footer/footer.css
@@ -1,55 +1,54 @@
-.footer-container{
-    background-color:#172337;;
+.footer-container {
+    background-color: #172337;
+    ;
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
     height: 200px;
     color: white;
     /* background-color: aqua; */
     position: absolute;
-    bottom:0px;
-       
+    bottom: 0px;
+
 }
-.footer-1{
+
+.footer-1 {
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
 
     /* border:1px solid black; */
     width: 50%;
     height: 100px;
 }
-.footer-2{
+
+.footer-2 {
     border-left-style: solid;
     width: 50%;
     height: 100px;
     /* display: flex; */
     /* justify-content: start; */
     /* padding: auto; */
-}
+} 
 
 @media only screen and (max-width: 400px) {
-    .footer-container{
-      /* background-color: lightblue; */
-      display:block;
-      text-align: center;
-      height: auto;
-      margin: auto;
-      padding: auto;
+    .footer-container {
+        display: block;
+        text-align: center;
+        height: auto;
+        margin: auto;
+        padding: auto;
     }
-    .footer-1{
+
+    .footer-1 {
         text-align: center;
         margin: auto;
-
     }
-    .footer-2{
+
+    .footer-2 {
         border: none;
         height: auto;
         text-align: center;
         margin: auto;
-
-
-
-        
     }
-  }
+}
