--- a/front_end/src/components/product-category/productcategory.css
+++ b/front_end/src/components/product-category/productcategory.css
@@ -7,11 +7,20 @@
 
 .div {
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 }
 
 .inner-card {
     margin: 2rem auto 0 auto;
+}
+
+.wishlist-btn {
+    border: none;
+    z-index: 10;
+    position: relative;
+    top: -28rem;
+    right: -9.3rem;
+    background: none;
+    transform: scale(2);
 }
