Add wishlist btn & login modal fnctlity usg redux

--- a/front_end/src/components/product-listing/product-listing.css
+++ b/front_end/src/components/product-listing/product-listing.css
@@ -13,13 +13,17 @@
     justify-content: center;
 }
 
-.wishlist-btn {
+.img {
+    height: 28rem;
+}
+
+.wishlist-btn-cat {
     border: none;
     z-index: 10;
     position: relative;
     top: -28rem;
-    right: -9.3rem;
-    background:none;
+    right: -8.3rem;
+    background: none;
     transform: scale(2);
 }
 
