--- a/front_end/src/components/product-category/productcategory.css
+++ b/front_end/src/components/product-category/productcategory.css
@@ -15,12 +15,16 @@
     margin: 2rem auto 0 auto;
 }
 
-.wishlist-btn {
+.img {
+    height: 28rem;
+}
+
+.wishlist-btn-new {
     border: none;
     z-index: 10;
     position: relative;
     top: -28rem;
-    right: -9.3rem;
+    right: -16.3rem;
     background: none;
     transform: scale(2);
 }
