--- a/front_end/src/components/wishlist/WishlistCard.css
+++ b/front_end/src/components/wishlist/WishlistCard.css
@@ -35,12 +35,17 @@
 .card-button{
     text-align: end;
     width: auto;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     color: black;
     margin: 10px;
-    border-radius: 5px
+    border-radius: 5px;
+    
 
 }
+.card-button{
+    font-size:2rem;
+}
+
 .card-img-main{
     width: 100px;
     height: 100px;
