designed view order page

--- a/front_end/src/components/order/vieworder.css
+++ b/front_end/src/components/order/vieworder.css
@@ -5,3 +5,14 @@
 p {
   margin: 0;
 }
+
+.order-img {
+  height: 150;
+  width: 100%;
+  object-fit: "contain";
+}
+
+.order-grid {
+  width: 100%;
+  text-align: "center";
+}
