--- a/front_end/src/components/order/vieworder.css
+++ b/front_end/src/components/order/vieworder.css
@@ -7,12 +7,84 @@ p {
 }
 
 .order-img {
-  height: 150;
   width: 100%;
-  object-fit: "contain";
+  height: 100px;
+  object-fit: contain;
 }
 
 .order-grid {
   width: 100%;
   text-align: "center";
+}
+
+@media only screen and (max-width: 768px) {
+  .order-page-layout {
+    display: flex;
+    flex-direction: column !important;
+    width: 100%;
+  }
+  .order-filter {
+    width: 100vw !important;
+    max-width: 100vw !important;
+  }
+  .order-search {
+    width: 97.5vw;
+  }
+  .order-list-of-card {
+    width: 97.5vw;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .order-page-layout {
+    display: flex;
+    flex-direction: column !important;
+    width: 100%;
+  }
+  .order-filter {
+    width: 100vw !important;
+    max-width: 100vw !important;
+  }
+  .order-search {
+    width: 95vw;
+  }
+  .order-list-of-card {
+    width: 95vw;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .order-page-layout {
+    display: flex;
+    flex-direction: column !important;
+    width: 100%;
+  }
+  .order-filter {
+    width: 100vw !important;
+    max-width: 100vw !important;
+  }
+  .order-search {
+    width: 95vw;
+  }
+  .order-list-of-card {
+    width: 95vw;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .order-page-layout {
+    display: flex;
+    flex-direction: column !important;
+    width: 100%;
+  }
+  .order-filter {
+    width: 100vw !important;
+    max-width: 100vw !important;
+  }
+  .order-search {
+    width: 94vw;
+  }
+  .order-list-of-card {
+    width: 94vw;
+  }
 }
