--- a/front_end/src/components/order/vieworder.css
+++ b/front_end/src/components/order/vieworder.css
@@ -17,6 +17,10 @@ p {
   text-align: "center";
 }
 
+.order-page-layout {
+  min-height: 85vh;
+}
+
 @media only screen and (max-width: 768px) {
   .order-page-layout {
     display: flex;
@@ -24,14 +28,15 @@ p {
     width: 100%;
   }
   .order-filter {
-    width: 100vw !important;
-    max-width: 100vw !important;
+    margin: 10px 0;
+    width: 80vw !important;
+    max-width: 80vw !important;
   }
   .order-search {
-    width: 97.5vw;
+    width: 77vw;
   }
   .order-list-of-card {
-    width: 97.5vw;
+    width: 77vw;
   }
 }
 
