--- a/front_end/src/components/footer/footer.css
+++ b/front_end/src/components/footer/footer.css
@@ -5,7 +5,7 @@
   height: auto;
   color: white;
   /* position: absolute; */
-  bottom: 0px;
+  /* bottom: 0px; */
 }
 .footer-text-container {
   display: flex;
