--- a/front_end/src/components/order/vieworder.css
+++ b/front_end/src/components/order/vieworder.css
@@ -21,6 +21,11 @@ p {
   min-height: 85vh;
 }
 
+.order-filter {
+  background: #f0f2f5;
+  margin: 10px 0;
+}
+
 @media only screen and (max-width: 768px) {
   .order-page-layout {
     display: flex;
@@ -31,12 +36,16 @@ p {
     margin: 10px 0;
     width: 80vw !important;
     max-width: 80vw !important;
+    flex: 0;
   }
   .order-search {
-    width: 77vw;
+    width: 80vw;
   }
   .order-list-of-card {
-    width: 77vw;
+    width: 80vw;
+  }
+  .margin-10-px {
+    margin: 10px 0;
   }
 }
 
@@ -47,14 +56,19 @@ p {
     width: 100%;
   }
   .order-filter {
-    width: 100vw !important;
-    max-width: 100vw !important;
+    width: 95vw !important;
+    max-width: 95vw !important;
+    margin: 10px;
+    flex: 0 !important;
   }
   .order-search {
     width: 95vw;
   }
   .order-list-of-card {
     width: 95vw;
+  }
+  .order-page-content {
+    margin: 10px;
   }
 }
 
@@ -65,31 +79,36 @@ p {
     width: 100%;
   }
   .order-filter {
-    width: 100vw !important;
-    max-width: 100vw !important;
+    width: 94vw !important;
+    max-width: 94vw !important;
+    margin: 10px;
+    flex: 0 !important;
   }
   .order-search {
-    width: 95vw;
+    width: 94vw;
   }
   .order-list-of-card {
-    width: 95vw;
+    width: 94vw;
+  }
+  .order-page-content {
+    margin: 10px;
   }
 }
 
 @media only screen and (max-width: 320px) {
-  .order-page-layout {
-    display: flex;
-    flex-direction: column !important;
-    width: 100%;
-  }
   .order-filter {
-    width: 100vw !important;
-    max-width: 100vw !important;
+    width: 94vw !important;
+    max-width: 94vw !important;
+    margin: 10px;
+    flex: 0 !important;
   }
   .order-search {
     width: 94vw;
   }
   .order-list-of-card {
     width: 94vw;
+  }
+  .order-page-content {
+    margin: 10px;
   }
 }
