--- a/front_end/src/utils/Container/container.css
+++ b/front_end/src/utils/Container/container.css
@@ -1,6 +1,7 @@
 .main-container {
   width: 80%;
-  margin: auto;
+  margin: 20px auto;
+  min-height: 85vh;
 }
 
 @media only screen and (max-width: 425px) {
