some changes on input number field

--- a/front_end/src/components/registration/registration.css
+++ b/front_end/src/components/registration/registration.css
@@ -11,3 +11,8 @@
 .login-btn:hover{
     color:#4f23e2;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
