--- a/front_end/src/components/profile/profile.css
+++ b/front_end/src/components/profile/profile.css
@@ -6,6 +6,10 @@
   .main-title {
       text-align:center;
   }
+.profile-sidebar{
+  font-weight: bold;
+}
+
 
   .editbtn{
       border: none;
@@ -47,3 +51,12 @@
         padding: 5px;
 
   }
+  .sidebar-nav-link{
+    text-align:left;
+  }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
