--- a/front_end/src/components/wishlist/WishlistCard.css
+++ b/front_end/src/components/wishlist/WishlistCard.css
@@ -5,9 +5,9 @@
     /* background-color:#2874f0 ; */
     background-color: white;
     color: white;
-    width: 70%;
+    width: 95%;
     height:auto;
-    margin: auto;
+    /* margin: auto; */
     margin:10px auto 10px auto;
     padding: 5px;
     border: 1px solid black;
