--- a/front_end/src/components/manage-address/address.css
+++ b/front_end/src/components/manage-address/address.css
@@ -1,29 +1,40 @@
-.address-page-layout {
-    min-height: 82.4vh;
+.addresss-page-layout {
+  min-height: 82.3vh;
 }
 
-.address-sidebar{
-  font-weight: bold;
+.sidebar{
+  height: 80vh
+}
+.Address-card{
+  padding: 15px;
 }
 
-.Main-container{
-    background-color:white;
+.Address-card-link{
+  color: #1890ff;
+  text-align: left;
+  display: block;
+  font-size: 20px;
+  background-color:white;
 }
+
+.Address-card-link:hover{
+  color:rgb(54, 11, 173);
+} 
 .card-title{
     font-weight: bold;
     font-size: 20px;
-
-}
+}  
 .add-address{
-    border:none;
+   padding: 10px;
+   border:1px solid rgba(129, 126, 126, 0.281);
     font-weight: bold;
-    background-color:white;
     text-align:left;
     font-size:15px;
     cursor: pointer;
     color: #1890ff;
     float: left;
 }
+
 .address-div{
     border: 1px solid rgba(102, 98, 98, 0.294);
     text-align:left;
@@ -36,30 +47,19 @@
 }
 .three-dots:after {
     cursor: pointer;
-    color: black;
     content: '\2807';
     font-size: 20px;
     padding: 0 5px;
-    text-align: right;
-    justify-content:right;
-    align-items: right;
+  }
 
-  }
-  
-  /* a {
-    text-decoration: none;
-    color: white;
-  }
-   */
-  a div {
-    padding: 4px;
-  }
-  
-  .dropdown {
-    /* position: absolute; */
-    background-color: rgb(223, 223, 235);
-    box-shadow: 0px 0px 3px 3px rgba(102, 102, 221, 0.253);
-    outline: none;
+  .user-name{
+    font-weight: bold;
+} 
+
+   .dropdown {
+    background-color: rgb(183, 183, 207);
+    border-radius:5px;
+    padding: 5px;
     opacity: 0;
     z-index: -1;
     max-height: 0;
@@ -67,16 +67,10 @@
     position: relative;
   }
   
-  .dropdown-container:focus {
-    outline: none;
-  }
-  
   .dropdown-container:focus .dropdown {
     opacity: 1;
     z-index: 100;
     max-height: 100vh;
-   
   }
-  .user-name{
-      font-weight: bold;
-  }
+ 
+  
