some changes on manage address screen

--- a/front_end/src/components/manage-address/addressform.css
+++ b/front_end/src/components/manage-address/addressform.css
@@ -3,6 +3,7 @@
     border: 1px solid rgba(71, 69, 69, 0.274);
     width:80vh;
     padding: 20px;
+    background-color:white;
   }
 
   .addform-input{
