--- a/front_end/src/components/profile/profile.css
+++ b/front_end/src/components/profile/profile.css
@@ -24,13 +24,15 @@
       margin-left: 60px;
 }
 
-.form{
+.profile-form{
   text-align:left;
   margin-left:50px;
   border: 1px solid rgba(71, 69, 69, 0.274);
   border-radius: 5px;
-  width: 50%;
-  height: 45vh;
+  height: 50vh;
+  width:80vh;
+  padding: 15px;
+  background-color:white;
 }
 
 .editbtn{
