--- a/front_end/src/components/manage-address/address.css
+++ b/front_end/src/components/manage-address/address.css
@@ -2,9 +2,9 @@
   min-height: 82.3vh;
 }
 
-.sidebar{
+/* .sidebar{
   height: 80vh
-}
+} */
 .Address-card{
   padding: 15px;
 }
@@ -32,8 +32,12 @@
     font-size:15px;
     cursor: pointer;
     color: #1890ff;
-    float: left;
-    
+    float: left;  
+}
+.address-contentdiv{
+  float: center;
+  margin-top:-80vh;
+  margin-left:32vh;
 }
 
 .address-div{
@@ -43,6 +47,8 @@
     height: 120px;
     padding:20px;
     margin-top: 20px;
+    background-color:white;
+   
 }
 
 .three-dots{
