--- a/front_end/src/utils/sidebar/sidebar.css
+++ b/front_end/src/utils/sidebar/sidebar.css
@@ -16,3 +16,43 @@
 .Sidebar-card-link:hover{
   color:rgb(54, 11, 173);
 }
+
+@media only screen and (max-width: 768px) {
+  .Sidebar-page-layout {
+    display: flex;
+    flex-direction: column !important;
+    width: 100%;
+  }
+  .Sidebar {
+    margin: 10px 0;
+    width: 80vw !important;
+    max-width: 80vw !important;
+    flex: 0;
+  }
+}
+@media only screen and (max-width: 425px) {
+  .Sidebar {
+    width: 95vw !important;
+    max-width: 95vw !important;
+    margin: 10px;
+    flex: 0 !important;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .Sidebar {
+    width: 94vw !important;
+    max-width: 94vw !important;
+    margin: 10px;
+    flex: 0 !important;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .Sidebar {
+    width: 94vw !important;
+    max-width: 94vw !important;
+    margin: 10px;
+    flex: 0 !important;
+  }
+}
